My Second Commit with pom.xml properties

--- a/ExpenseTrackerBackend/pom.xml
+++ b/ExpenseTrackerBackend/pom.xml
@@ -5,9 +5,19 @@
     <artifactId>ExpenseTrackerBackend</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.5.RELEASE</version>
+        <relativePath/>
+    </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+       <!-- Look java version in this case 8--> 
+        <java.version>1.8</java.version>  
     </properties>
+    
+    
 </project>
